[package]
name = "hashfund"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.1"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.15"
spl-associated-token-account = { version = "3.0.2", features = [
    "no-entrypoint",
] }
spl-program-error = { version = "0.4.1" }
spl-token = { version = "4.0.1", features = ["no-entrypoint"] }

[lib]
name = "hashfund"
crate-type = ["cdylib", "lib"]
