[package]
name = "hashfund"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
borsh = "1.5.1"
mpl-token-metadata = "4.1.2"
num-traits = "0.2.19"
solana-program = "1.18.15"
spl-associated-token-account = { version = "3.0.2", features = [
    "no-entrypoint",
] }
spl-program-error = { version = "0.4.1" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.61"
raydium_amm = { version = "0.3.0", git = "https://github.com/oasisMystre/raydium-amm", features = [
    "no-entrypoint",
] }
raydium-cp-swap = { version = "0.1.0", git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "cpi",
    "no-entrypoint",
] }
bounding_curve = { git = "https://github.com/oasisMystre/bounding_curve.git" }
serum_dex = { version = "0.5.6", git = "https://github.com/project-serum/serum-dex", features = [
    "no-entrypoint",
] }
pyth-sdk-solana = "0.10.1"
spl-program-error-derive = "0.4.1"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }

[lib]
name = "hashfund"
crate-type = ["cdylib", "lib"]
